--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
   },
   "homepage": "https://github.com/Tajudeenazeez/farmbest#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "colors": "^1.4.0",
     "dotenv": "^10.0.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongoose": "^6.0.6",
+    "react-responsive-carousel": "^3.2.21"
   },
   "devDependencies": {
     "concurrently": "^6.2.1",
